Bug 889152 - send format html and plain domains set in mailnews.js are ignored r=mnyromyr a=Standard8